# owi-metadatabase-shm-sdk

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  GitVersion.yml  README.md  index.html  invoke.yaml  pyproject.toml  zensical.toml
.copilot/skills/distributed-mesh/: sync-mesh.sh
.copilot/skills/secret-handling/: SKILL.md
.github/: copilot-instructions.md  python.prompt.md
.github/agents/: squad.agent.md
.github/scripts/: release_version.py
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml  release-on-merge.yml  release-preview.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/ash/: charter.md  history.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/parker/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/skills/python/: SKILL.md
.squad/templates/: cooperative-rate-limiting.md  issue-lifecycle.md  machine-capabilities.md  squad.agent.md
.squad/templates/casting/: Futurama.json
.squad/templates/workflows/: squad-heartbeat.yml  squad-label-enforce.yml
0.1.0/: objects.inv
0.1.0/about/authors/: index.html
0.1.0/about/license/: index.html
0.1.0/development/contributing/: index.html
0.1.0/development/release/: index.html
0.1.0/development/testing/: index.html
0.1.0/explanation/: index.html
0.1.0/explanation/sensor-data-model/: index.html
0.1.0/explanation/signal-data-model/: index.html
0.1.0/how-to/process-signal-configs/: index.html
0.1.0/how-to/upload-sensor-calibrations/: index.html
0.1.0/reference/: index.html
0.1.0/tutorials/first-query/: index.html
0.1.0/tutorials/upload-signals/: index.html
0.1.2/: index.html  objects.inv  search.json
0.1.2/about/authors/: index.html
0.1.2/about/changelog/: index.html
0.1.2/development/contributing/: index.html
0.1.2/development/release/: index.html
0.1.2/development/testing/: index.html
0.1.2/explanation/namespace-packages/: index.html
0.1.2/explanation/sensor-data-model/: index.html
0.1.2/explanation/signal-data-model/: index.html
0.1.2/how-to/authenticate/: index.html
0.1.2/how-to/get-signal-data/: index.html
0.1.2/how-to/install/: index.html
0.1.2/how-to/process-signal-configs/: index.html
0.1.2/how-to/upload-sensor-calibrations/: index.html
0.1.2/reference/api/: index.html
0.1.2/tutorials/upload-sensors/: index.html
0.1.2/tutorials/upload-signals/: index.html
archive/: repository-refactoring-plan-for-sdk.md
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/about/changelog/: index.html
dev/explanation/: index.html
dev/how-to/: index.html
dev/reference/: index.html
dev/tutorials/: index.html
docs/: index.md
docs/about/: authors.md  changelog.md  license.md
docs/development/: contributing.md  release.md  testing.md
docs/explanation/: architecture.md  dry-run-upload.md  index.md  namespace-packages.md  sensor-data-model.md  signal-data-model.md
docs/how-to/: authenticate.md  get-sensor-data.md  get-signal-data.md  index.md  install.md  process-signal-configs.md  upload-sensor-calibrations.md  upload-sensor-types.md  upload-sensors.md
docs/reference/: index.md
docs/tutorials/: first-query.md  index.md  retrieve-data.md  upload-sensors.md  upload-signals.md
scripts/: 1.0.upload-sensors.ipynb  2.0.upload-signals.ipynb
tasks/: __init__.py  colors.py  docs.py  performance.py  quality.py  system.py  test.py
tests/: test_imports.py  test_release_version.py
tests/shm/: test_dry_run_upload.py  test_io.py  test_lookup.py  test_models.py  test_payloads.py  test_processing.py  test_registry.py  test_sensor_uploader.py  test_serializers.py  test_services.py  test_signal_utilities.py  test_uploader.py
(+79 files in other folders)
