[project]
name = "owi-metadatabase-shm"
version = "0.1.0"
description = "SHM extension for OWI Metadatabase SDK"
authors = [
    { name = "Pietro D'Antuono", email = "pietro.dantuono@vub.be" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.15"

keywords = ["owimetadatabase", "extension", "shm"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "owi-metadatabase>=0.1.4",
    "pandas>=2.0.0",
    "pydantic>=2.11.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.3",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "docs"},
    {include-group = "dev-tools"},
    "ipykernel< 7.2.0 ; python_version < '3.10'",
    "ipykernel>=7.2.0 ; python_version >= '3.10'",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
test = [
    "pytest >=8.4.0",
    "pytest-mock >=3.15.0",
    "pytest-xdist >=3.7.0",
    "pytest-clarity >=1.0.0",
    "pytest-cov >=7.0.0",
    "requests-mock >=1.12.1",
    "hypothesis >=6.100.0"
]
lint = [
    "ruff>=0.12.9",
]
typing = [
    "ty >=0.0.14",
    "pandas-stubs >=2.0.0,<2.2.3.241009 ; python_version < '3.10'",
    "pandas-stubs >=2.2.3.241009 ; python_version >= '3.10'",
    "types-requests >=2.32.0",
]
docs = [
    "zensical >=0.0.28 ; python_version >= '3.10'",
    "mkdocstrings-python >=1.0.0 ; python_version >= '3.10'",
    "pymdown-extensions >=10.0",
]
dev-tools = [
    "bump2version>=1.0.1",
    "invoke>=2.2.0",
    "pre-commit>=3.0.0",
    "deptry >=0.23.1"
]

[project.urls]
homepage = "https://owi-lab.github.io/owi-metadatabase-sdk/"
repository = "https://github.com/OWI-Lab/owi-metadatabase-shm-sdk/"
documentation = "https://owi-lab.github.io/owi-metadatabase-shm-sdk/"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi"]
include = ["src/owi/metadatabase/shm/config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
    "--cov=src/owi/metadatabase/shm",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--doctest-glob=*.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["owi.metadatabase.shm"]

[tool.uv.workspace]
members = ["."]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.deptry.per_rule_ignores]
DEP002 = ["plotly", "matplotlib", "pyproj", "tqdm", "scipy", "sklearn"]
DEP003 = ["owi"]
DEP004 = ["owi"]

# [tool.uv.sources]
# owi-metadatabase = { index = "testpypi" }
